fix - some layout bugs

--- a/src/styles.css
+++ b/src/styles.css
@@ -103,6 +103,24 @@ a:hover {
   cursor: pointer;
 }
 
+input[type=submit] {
+  width: 35vmin !important;
+  background-color: var(--primary-color-light);
+  color: var(--white) !important;
+  border: 0px !important;
+  padding: 1vmin 0.75vmin;
+  border-radius: 8px !important;
+  cursor: pointer !important;
+}
+
+input[type=submit]:hover {
+  background-color: var(--secondary-color-dark);
+}
+
+input[type=submit]:active {
+  background-color: var(--primary-color);
+}
+
 button {
   width: 35vmin !important;
   background-color: var(--primary-color-light);
